# iotc-python-sdk

./: .gitignore  README.md
iotconnect-sdk-1.0/: README.md  help.txt  pyproject.toml  setup.cfg
iotconnect-sdk-1.0/iotconnect/: IoTConnectSDK.py  __init__.py
iotconnect-sdk-1.0/iotconnect/client/: offlineclient.py
iotconnect-sdk-1.0/iotconnect/common/: data_evaluation.py  rule_evaluation.py
sample/: credentials.py  main.py
sample/primary/: basic_sample.py
