[metadata]
name = iotconnect-sdk
version = attr: iotconnect.__version__
author = You
author_email = your@email.address
url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = iotconnect, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

# setup(
#     name="iotconnect-sdk",
#     version="1.0",
#     python_requires=">=2.7,>=3.5,<3.9",
#     description='SDK for D2C and C2D communication',
#     license="MIT",
#     author='SOFTWEB SOLUTIONS<admin@softwebsolutions.com> (https://www.softwebsolutions.com)',
#     packages=["iotconnect", "iotconnect.client", "iotconnect.common"],
#     install_requires=packages_requires,
#     package_data={'iotconnect': ['assets/*.*']},
#     platforms=['Linux', 'Mac OS X', 'Win'],
#     zip_safe=False,
#     classifiers=[
#         "Programming Language :: Python :: 2.7",
#         "Programming Language :: Python :: 3.6",
#         "Programming Language :: Python :: 3.7",
#         "Programming Language :: Python :: 3.8",
#         "License :: MIT License",
#         "Operating System :: OS Independent"
#     ],
# )


[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    paho-mqtt
    ntplib
    jsonlib-python3